fix dead links, clean up

--- a/bsd-flavors.html
+++ b/bsd-flavors.html
@@ -21,13 +21,13 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>BSD Flavors (14):</h3>
+          <h3>BSD Flavors (13):</h3>
           <br />
-<p><a href="http://bsdrp.net/">BSD Router Project</a> (BSDRP) is an embedded free and open source router distribution based on FreeBSD with Quagga and Bird.</p>
+<p><a href="https://bsdrp.net/">BSD Router Project</a> (BSDRP) is an embedded free and open source router distribution based on FreeBSD with Quagga and Bird.</p>
 
 <br /><br />
 
-<p><a href="http://www.desktopbsd.net/">DesktopBSD</a> is an open source operating system that aims at being a stable and powerful operating system for desktop users. Combining the stability of FreeBSD, the usability and functionality of KDE and the simplicity of specially developed software to provide a system that's easy to use and install, in a project with two primary goals - security and usability.</p>
+<p><a href="https://www.desktopbsd.net/">DesktopBSD</a> is an open source operating system that aims at being a stable and powerful operating system for desktop users. Combining the stability of FreeBSD, the usability and functionality of KDE and the simplicity of specially developed software to provide a system that's easy to use and install, in a project with two primary goals - security and usability.</p>
 
 <br /><br />
 
@@ -39,19 +39,15 @@
 
 <br /><br />
 
-<p><a href="http://www.freenas.org/">FreeNAS</a> is a free and open-source software network-attached storage (NAS) system based on FreeBSD and the OpenZFS file system.</p>
+<p><a href="https://www.freenas.org/">FreeNAS</a> is a free and open-source software network-attached storage (NAS) system based on FreeBSD and the OpenZFS file system.</p>
 
 <br /><br />
 
-<p><a href="http://www.ghostbsd.org/">GhostBSD</a> is a user-friendly BSD operating system built on top of FreeBSD. FreeBSD is known to be a solid, powerful, secure and stable server operating system, providing an excellent base for a desktop operating system.</p>
+<p><a href="https://www.ghostbsd.org/">GhostBSD</a> is a user-friendly BSD operating system built on top of FreeBSD. FreeBSD is known to be a solid, powerful, secure and stable server operating system, providing an excellent base for a desktop operating system.</p>
 
 <br /><br />
 
-<p><a href="http://www.midnightbsd.org/">MidnightBSD</a> is a new BSD-derived operating system developed with desktop users in mind. It includes all the software you'd expect for your daily tasks — email, web browsing, word processing, gaming, and much more.</p>
-
-<br /><br />
-
-<p><a href="http://www.nas4free.org/">NAS4Free</a> is a network-attached storage (NAS) server software with a dedicated management web interface (written in PHP).</p>
+<p><a href="https://www.midnightbsd.org/">MidnightBSD</a> is a new BSD-derived operating system developed with desktop users in mind. It includes all the software you'd expect for your daily tasks — email, web browsing, word processing, gaming, and much more.</p>
 
 <br /><br />
 
@@ -60,7 +56,7 @@ clean design and advanced features make it excellent for use in both production 
 
 <br /><br />
 
-<p><a href="http://www.openbsd.org/">OpenBSD</a> produces a <b>FREE</b>, multi-platform 4.4BSD-based UNIX-like operating system. Our efforts emphasize portability, standardization, correctness, proactive security and integrated cryptography. As an example of the effect OpenBSD has, the popular OpenSSH software comes from OpenBSD.</p>
+<p><a href="https://www.openbsd.org/">OpenBSD</a> produces a <b>FREE</b>, multi-platform 4.4BSD-based UNIX-like operating system. Our efforts emphasize portability, standardization, correctness, proactive security and integrated cryptography. As an example of the effect OpenBSD has, the popular OpenSSH software comes from OpenBSD.</p>
 <br /><br />
 
 <p><a href="https://opnsense.org/">OPNsense</a> is an open source, easy-to-use and easy-to-build FreeBSD based firewall and routing platform.</p>
@@ -71,12 +67,11 @@ clean design and advanced features make it excellent for use in both production 
 
 <br /><br />
 
-<p><a href="http://www.raspbsd.org/">RaspBSD</a> is a image of FreeBSD 11 that is preconfigured in two different images for Raspberry Pi Computers (and more soon).</p>
+<p><a href="https://www.trueos.org/">TrueOS</a> (formerly PC-BSD) is designed from the ground up for ease of use. All the packages needed for a fully functional desktop are included out of the box, and the graphical installer makes it simple to set up a new TrueOS® installation. TrueOS is based on FreeBSD-Current.</p>
 
 <br /><br />
 
-<p><a href="https://www.trueos.org/">TrueOS</a> (formerly PC-BSD) is designed from the ground up for ease of use. All the packages needed for a fully functional desktop are included out of the box, and the graphical installer makes it simple to set up a new TrueOS® installation. TrueOS is based on FreeBSD-Current.</p>
-
+<p><a href="https://www.xigmanas.com/">XigmaNAS</a> is an Open Source Storage NAS (Network-Attached Storage) distribution based on FreeBSD.</p>
 
 
 	  <br />
@@ -95,11 +90,11 @@ clean design and advanced features make it excellent for use in both production 
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -107,9 +102,8 @@ clean design and advanced features make it excellent for use in both production 
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
