--- a/bsd.html
+++ b/bsd.html
@@ -21,35 +21,32 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>BSD Blogs, Forums, News, and Tutorials (7):</h3>
+          <h3>BSD Blogs, Forums, News, and Tutorials (3):</h3>
           <br />
           <ul>
             <li><a href="bsd.html#Blogs">Blogs, Info, News</a> (2)</li>
-            <li><a href="bsd.html#Forums">Forums</a> (2)</li>
-            <li><a href="bsd.html#Planets">Planets</a> (3)</li>
+            <li><a href="bsd.html#Forums">Forums</a> (0)</li>
+            <li><a href="bsd.html#Planets">Planets</a> (1)</li>
           </ul>
 
 <br /><br /><br />
 
 <h3><a id="Blogs">Blogs, Info, News</a> (2):</h3>
 <br />
-<p><a href="http://undeadly.org/">OpenBSD Journal</a> is an awesome resource for the OpenBSD community.</p>
+<p><a href="https://undeadly.org/">OpenBSD Journal</a> is an awesome resource for the OpenBSD community.</p>
 <br /><br />
-<p><a href="http://www.freebsddiary.org/">The FreeBSD Diary</a> is the largest collection of how-to's, tutorials, and guides for FreeBSD anywhere. However, much of what you will find is generic, and can be easily adapted to any
+<p><a href="https://www.freebsddiary.org/">The FreeBSD Diary</a> is the largest collection of how-to's, tutorials, and guides for FreeBSD anywhere. However, much of what you will find is generic, and can be easily adapted to any
   other Unix-like operating system.</p>
 
 <br /><br /><br /><br />
 
-<h3><a id="Forums">Forums</a> (2):</h3>
-<p>DaemonForums <a href="http://daemonforums.org/">http://daemonforums.org/</a></p>
-<p>UnitedBSD <a href="https://unitedbsd.com/">https://unitedbsd.com/</a></p>
+<h3><a id="Forums">Forums</a> (0):</h3>
+
 
 <br /><br /><br /><br />
 
-<h3><a id="Planets">Planets</a> (3):</h3>
+<h3><a id="Planets">Planets</a> (1):</h3>
 <p>NetBSD Planet <a href="http://netbsd.fi/">http://netbsd.fi/</a></p>
-<p>Planet FreeBSD <a href="https://planet.freebsd.org/">https://planet.freebsd.org</a></p>
-<p>Planet OpenBSD <a href="http://openbsdnow.org/">http://openbsdnow.org/</a></p>
 
 	  <br />
 
@@ -67,11 +64,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -79,9 +76,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
