--- a/conferences.html
+++ b/conferences.html
@@ -21,13 +21,13 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Conferences (45):</h3>
+          <h3>Conferences (41):</h3>
           <br />
           <ul>
           <li><a href="conferences.html#BSD">BSD</a> (3)</li>
-          <li><a href="conferences.html#Hacker">Hacker, Infosec</a> (23)</li>
+          <li><a href="conferences.html#Hacker">Hacker, Infosec</a> (22)</li>
           <li><a href="conferences.html#Linux">Linux</a> (8)</li>
-          <li><a href="conferences.html#OpenSource">OpenSource</a> (11)</li>
+          <li><a href="conferences.html#OpenSource">OpenSource</a> (8)</li>
 
           </ul>
 
@@ -42,41 +42,40 @@
 
 	        <br /><br /><br /><br />
 
-          <h3><a id="Hacker">Hacker, Infosec</a> (23):</h3>
+          <h3><a id="Hacker">Hacker, Infosec</a> (22):</h3>
           <p>Black Hat <a href="https://www.blackhat.com/">https://www.blackhat.com/</a> Asia, Europe, USA</p>
-          <p>BruCON <a href="http://brucon.org">http://brucon.org</a></p>
-          <p>BurbSec <a href="http://burbsec.com/">http://burbsec.com/</a> Chicagoland Area</p>
-          <p>CactusCon <a href="http://www.cactuscon.com/">http://www.cactuscon.com/</a> Phoenix, AZ</p>
-          <p>CarolinaCon <a href="http://carolinacon.org/">http://carolinacon.org/</a> Raleigh, NC</p>
+          <p>BruCON <a href="https://brucon.org">https://brucon.org</a></p>
+          <p>BurbSec <a href="https://burbsec.com/">https://burbsec.com/</a> Chicagoland Area</p>
+          <p>CactusCon <a href="https://www.cactuscon.com/">https://www.cactuscon.com/</a> Phoenix, AZ</p>
+          <p>CarolinaCon <a href="https://carolinacon.org/">https://carolinacon.org/</a> Raleigh, NC</p>
           <p>CircleCityCon <a href="https://circlecitycon.com/">https://circlecitycon.com/</a> Indianapolis, IN</p>
-          <p>Converge <a href="http://convergeconference.org/">http://convergeconference.org/</a> Detroit, MI</p>
+          <p>Converge <a href="https://convergeconference.org/">https://convergeconference.org/</a> Detroit, MI</p>
           <p>BSides <a href="http://www.securitybsides.com/">http://www.securitybsides.com/</a></p>
           <p>DEF CON <a href="https://www.defcon.org/">https://www.defcon.org/</a></p>
-          <p>DerbyCon <a href="https://www.derbycon.com/">https://www.derbycon.com/</a> Louisville, KY</p>
-          <p>GrrCON <a href="http://grrcon.com/">http://grrcon.com/</a> Grand Rapids, MI</p>
-          <p>Hacker Halted <a href="http://www.hackerhalted.com/">http://www.hackerhalted.com/</a> Atlanta, GA</p>
-          <p>HOPE <a href="http://www.hope.net/">http://www.hope.net/</a> NYC</p>
+          <p>GrrCON <a href="https://grrcon.com/">https://grrcon.com/</a> Grand Rapids, MI</p>
+          <p>Hacker Halted <a href="https://www.hackerhalted.com/">https://www.hackerhalted.com/</a> Atlanta, GA</p>
+          <p>HOPE <a href="https://www.hope.net/">https://www.hope.net/</a> NYC</p>
           <p>NolaCon <a href="https://nolacon.com/">https://nolacon.com/</a> New Orleans, LA</p>
           <p>ROOTCON <a href="https://www.rootcon.org/">https://www.rootcon.org/</a> Metro Manila, Philippines</p>
-          <p>RSA <a href="http://www.rsaconference.com/">http://www.rsaconference.com/</a></p>
-          <p>ShmooCon <a href="http://shmoocon.org/">http://shmoocon.org/</a> Washington, DC</p>
-          <p>ShowMeCon <a href="http://showmecon.com/">http://showmecon.com/</a> St. Louis, MO</p>
+          <p>RSA <a href="https://www.rsaconference.com/">https://www.rsaconference.com/</a></p>
+          <p>ShmooCon <a href="https://shmoocon.org/">https://shmoocon.org/</a> Washington, DC</p>
+          <p>ShowMeCon <a href="https://showmecon.com/">https://showmecon.com/</a> St. Louis, MO</p>
           <p>SOURCE <a href="http://www.sourceconference.com/">http://www.sourceconference.com/</a></p>
-          <p>Tactical Edge <a href="http://www.tacticaledge.co/">http://www.tacticaledge.co/</a> Bogota, Colombia</p>
-          <p>THOTCON <a href="http://thotcon.org/">http://thotcon.org/</a> Chicago</p>
+          <p>Tactical Edge <a href="https://www.tacticaledge.co/">https://www.tacticaledge.co/</a> Bogota, Colombia</p>
+          <p>THOTCON <a href="https://thotcon.org/">https://thotcon.org/</a> Chicago</p>
           <p>TROOPERS <a href="https://www.troopers.de/">https://www.troopers.de/</a></p>
-          <p>WAHCKon <a href="http://wahckon.org.au/">http://wahckon.org.au/</a> Perth</p>
+          <p>WAHCKon <a href="https://wahckon.org.au/">https://wahckon.org.au/</a> Perth</p>
 
           <br /><br /><br /><br />
 
 
           <h3><a id="Linux">Linux</a> (8):</h3>
           <p>Kansas Linux Fest <a href="http://www.kansaslinuxfest.us/">http://www.kansaslinuxfest.us/</a></p>
-          <p>LinuxFest NorthWest <a href="http://linuxfestnorthwest.org/">http://linuxfestnorthwest.org/</a> WA</p>
+          <p>LinuxFest NorthWest <a href="https://linuxfestnorthwest.org/">https://linuxfestnorthwest.org/</a> WA</p>
           <p>Linux Plumber Conference <a href="https://www.linuxplumbersconf.org/">https://www.linuxplumbersconf.org/</a></p>
           <p>Ohio LinuxFest <a href="https://ohiolinux.org/">https://ohiolinux.org/</a> Columbus, OH</p>
-          <p>Seattle GNU/Linux Conference <a href="http://seagl.org/">http://seagl.org/</a></p>
-          <p>SouthEast LinuxFest <a href="http://www.southeastlinuxfest.org/">http://www.southeastlinuxfest.org/</a></p>
+          <p>Seattle GNU/Linux Conference <a href="https://seagl.org/">https://seagl.org/</a></p>
+          <p>SouthEast LinuxFest <a href="https://www.southeastlinuxfest.org/">https://www.southeastlinuxfest.org/</a></p>
           <p>Southern California Linux Expo (SCaLE) <a href="https://www.socallinuxexpo.org/">https://www.socallinuxexpo.org/</a></p>
           <p>Texas LinuxFest <a href="https://texaslinuxfest.org">https://texaslinuxfest.org</a></p>
 
@@ -84,18 +83,15 @@
           <br /><br /><br /><br />
 
 
-          <h3><a id="OpenSource">OpenSource</a> (11):</h3>
-          <p>All Things Open <a href="http://allthingsopen.org/">http://allthingsopen.org/</a> Raleigh, NC</p>
-          <p>CPOSC <a href="http://cposc.org/">http://cposc.org/</a> Lancaster, PA</p>
-          <p>Flourish <a href="http://flourishconf.com/">http://flourishconf.com/</a> Chicago</p>
-          <p>FOSSCON <a href="http://www.fosscon.us/">http://www.fosscon.us/</a></p>
+          <h3><a id="OpenSource">OpenSource</a> (8):</h3>
+          <p>All Things Open <a href="https://allthingsopen.org/">https://allthingsopen.org/</a> Raleigh, NC</p>
+          <p>CPOSC <a href="https://cposc.org/">https://cposc.org/</a> Lancaster, PA</p>
+          <p>Flourish <a href="https://flourishconf.com/">https://flourishconf.com/</a> Chicago</p>
+          <p>FOSSCON <a href="https://www.fosscon.us/">https://www.fosscon.us/</a></p>
           <p>FOSS4G NA<a href="https://foss4g-na.org/">https://foss4g-na.org/</a> North America</p>
-          <p>Fossetcon <a href="http://fossetcon.org/">http://fossetcon.org/</a> Orlando, FL</p>
-          <p>Great Wide Open <a href="http://greatwideopen.org/">http://greatwideopen.org/</a> Atlanta, GA</p>
-          <p>Open Source Bridge <a href="http://opensourcebridge.org/">http://opensourcebridge.org/</a> Portland, OR</p>
-          <p>OSCON <a href="http://conferences.oreilly.com/oscon/">http://conferences.oreilly.com/oscon/</a></p>
-          <p>Penguicon <a href="http://penguicon.org/">http://penguicon.org/</a> Southfield, MI</p>
-          <p>Posscon <a href="http://posscon.org/">http://posscon.org/</a> Columbia, SC</p>
+          <p>OSCON <a href="https://conferences.oreilly.com/oscon/">https://conferences.oreilly.com/oscon/</a></p>
+          <p>Penguicon <a href="https://penguicon.org/">https://penguicon.org/</a> Southfield, MI</p>
+          <p>Posscon <a href="https://posscon.org/">https://posscon.org/</a> Columbia, SC</p>
 
 
           <br /><br /><br /><br />
@@ -113,11 +109,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -125,9 +121,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
