--- a/firewalls.html
+++ b/firewalls.html
@@ -21,11 +21,11 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Firewalls (10):</h3>
+          <h3>Firewalls (9):</h3>
           <br />
           <ul>
           <li><a href="firewalls.html#BSDFWOS">BSD Based Firewall Operating Systems</a> (2)</li>
-          <li><a href="firewalls.html#LBFD">Linux Based Firewall Distributions</a> (6)</li>
+          <li><a href="firewalls.html#LBFD">Linux Based Firewall Distributions</a> (5)</li>
           <li><a href="firewalls.html#LIPCFE">Linux iptables Console Front-ends</a> (2)</li>
           </ul>
 
@@ -41,20 +41,19 @@
           <br /><br /><br /><br />
 
 
-          <h3><a id="LBFD">Linux Based Firewall Distributions</a> (6):</h3>
-          <p>Devil-Linux <a href="http://www.devil-linux.org/">http://www.devil-linux.org/</a></p>
-          <p>Endian Firewall Community (EFW) <a href="http://www.endian.com/community/overview/">http://www.endian.com/community/overview/</a></p>
-          <p>IPCop <a href="http://www.ipcop.org/">http://www.ipcop.org/</a></p>
-          <p>IPFire <a href="http://www.ipfire.org/">http://www.ipfire.org/</a></p>
-          <p>Untangle <a href="http://www.untangle.com/">http://www.untangle.com/</a></p>
-          <p>VyOS <a href="http://vyos.net/">http://vyos.net/</a></p>
+          <h3><a id="LBFD">Linux Based Firewall Distributions</a> (5):</h3>
+          <p>Endian Firewall Community (EFW) <a href="https://www.endian.com/community/overview/">https://www.endian.com/community/overview/</a></p>
+          <p>IPCop <a href="https://www.ipcop.org/">https://www.ipcop.org/</a></p>
+          <p>IPFire <a href="https://www.ipfire.org/">https://www.ipfire.org/</a></p>
+          <p>Untangle <a href="https://www.untangle.com/">https://www.untangle.com/</a></p>
+          <p>VyOS <a href="https://vyos.net/">https://vyos.net/</a></p>
 
 
           <br /><br /><br /><br />
 
 
           <h3><a id="LIPCFE">Linux iptables Console Front-ends</a> (2):</h3>
-          <p>Shorewall <a href="http://www.shorewall.net/">http://www.shorewall.net/</a></p>
+          <p>Shorewall <a href="https://www.shorewall.net/">https://www.shorewall.net/</a></p>
           <p>Uncomplicated Firewall (ufw) <a href="https://launchpad.net/ufw">https://launchpad.net/ufw</a></p>
 	  <br />
 
@@ -72,11 +71,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -84,9 +83,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
