--- a/linuxdistros-infosec.html
+++ b/linuxdistros-infosec.html
@@ -29,21 +29,17 @@
           <br /><br />
           <p><a href="https://www.blackarch.org/">BlackArch Linux</a> is an Arch Linux-based distribution for penetration testers and security researchers. The repository contains over 1400 tools. You can install tools individually or in groups. BlackArch Linux is compatible with existing Arch installs.</p>
           <br /><br />
-          <p><a href="http://bugtraq-team.com/">Bugtraq</a> is a distribution based on GNU/Linux aimed at digital forensics, penetration testing, Malware Laboratories, and GSM Forensics.</p>
-          <br /><br />
-          <p><a href="http://www.caine-live.net/">CAINE</a> (Computer Aided INvestigative Environment) is an Italian GNU/Linux live Debian based distribution created as a project of Digital Forensics. CAINE has a specific focus on digital forensics, so if this is your area the this distro is highly recommended.</p>
-          <br /><br />
-          <p><a href="http://www.deftlinux.net/">DEFT</a> (Digital Evidence & Forensic Toolkit) is a customised distribution of the Ubuntu live Linux CD. It is an easy-to-use system that includes excellent hardware detection and some of the best open-source applications dedicated to incident response and computer forensics. </p>
+          <p><a href="https://www.caine-live.net/">CAINE</a> (Computer Aided INvestigative Environment) is an Italian GNU/Linux live Debian based distribution created as a project of Digital Forensics. CAINE has a specific focus on digital forensics, so if this is your area the this distro is highly recommended.</p>
           <br /><br />
           <p><a href="https://labs.fedoraproject.org/en/security/">Fedora Security Lab</a> provides a safe test environment to work on security auditing, forensics, system rescue and teaching security testing methodologies in universities and other organizations.</p>
           <br /><br />
           <p><a href="https://www.kali.org/">Kali Linux</a> is an open source project that is maintained and funded by <a href="https://www.offensive-security.com/">Offensive Security</a>, a provider of world-class information security training and penetration testing services.</p>
           <br /><br />
-          <p><a href="http://www.matriux.com/">Matriux</a> is a phenomenon that was waiting to happen. It is a fully featured security distribution based on Debian consisting of a powerful bunch of more than 300 open source and free tools that can be used for various purposes including, but not limited to, penetration testing, ethical hacking, system and network administration, cyber forensics investigations, security testing, vulnerability analysis, and much more. It is a distribution designed for security enthusiasts and professionals, although it can be used normally as your default desktop system.</p>
+          <p><a href="https://www.matriux.com/">Matriux</a> is a phenomenon that was waiting to happen. It is a fully featured security distribution based on Debian consisting of a powerful bunch of more than 300 open source and free tools that can be used for various purposes including, but not limited to, penetration testing, ethical hacking, system and network administration, cyber forensics investigations, security testing, vulnerability analysis, and much more. It is a distribution designed for security enthusiasts and professionals, although it can be used normally as your default desktop system.</p>
           <br /><br />
-          <p><a href="http://www.parrotsec.org/">Parrot Security OS</a> is a security oriented operating system designed for Pentesting, Computer Forensic, Reverse engineering, Hacking, Cloud pentesting, privacy/anonimity and cryptography. Based on Debian and developed by Frozenbox network.</p>
+          <p><a href="https://www.parrotsec.org/">Parrot Security OS</a> is a security oriented operating system designed for Pentesting, Computer Forensic, Reverse engineering, Hacking, Cloud pentesting, privacy/anonimity and cryptography. Based on Debian and developed by Frozenbox network.</p>
           <br /><br />
-          <p><a href="http://www.pentoo.ch/">Pentoo</a> is a security-focused livecd based on Gentoo with lots of customized tools, customized kernel, and much more.</p>
+          <p><a href="https://www.pentoo.ch/">Pentoo</a> is a security-focused livecd based on Gentoo with lots of customized tools, customized kernel, and much more.</p>
           <br /><br />
           <p><a href="https://remnux.org/">REMnux</a> is a free Linux toolkit for assisting malware analysts with reverse-engineering malicious software. It strives to make it easier for forensic investigators and incident responders to start using the variety of freely-available tools that can examine malware, yet might be difficult to locate or set up.</p>
           <br /><br />
@@ -51,9 +47,9 @@
           <br /><br />
           <p><a href="https://security-onion-solutions.github.io/security-onion/">Security Onion</a> is a Linux distro for intrusion detection, network security monitoring, and log management. It's based on Ubuntu and contains Snort, Suricata, Bro, OSSEC, Sguil, Squert, ELSA, Xplico, NetworkMiner, and many other security tools. The easy-to-use Setup wizard allows you to build an army of distributed sensors for your enterprise in minutes!</p>
           <br /><br />
-          <p><a href="http://urix.us/">URIX</a> is a security-focused distribution and live DVD based on openSUSE.</p>
+          <p><a href="https://urix.us/">URIX</a> is a security-focused distribution and live DVD based on openSUSE.</p>
           <br /><br />
-          <p><a href="http://www.weaknetlabs.com/">WEAKERTH4N Linux</a> is a penetration testing environment based on Debian.</p>
+          <p><a href="https://www.weaknetlabs.com/">WEAKERTH4N Linux</a> is a penetration testing environment based on Debian.</p>
           <br /><br />
           <p></p>
 	  <br />
@@ -72,11 +68,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -84,9 +80,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
