--- a/online-courses.html
+++ b/online-courses.html
@@ -21,39 +21,40 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Online Courses (67):</h3>
+          <h3>Online Courses (59):</h3>
           <br />
           <ul>
-          <li><a href="online-courses.html#Cloud">Cloud Technologies</a> (1)</li>
+          <li><a href="online-courses.html#Cloud">Cloud Technologies</a> (2)</li>
           <li><a href="online-courses.html#Challenges">Code Challenges and Games</a> (5)</li>
           <li><a href="online-courses.html#CS">Computer Science</a> (2)</li>
           <li><a href="online-courses.html#Database">Database</a> (1)</li>
           <li><a href="online-courses.html#DataSci">Data Science</a> (2)</li>
-          <li><a href="online-courses.html#InfoSec">Information Security</a> (10)</li>
+          <li><a href="online-courses.html#InfoSec">Information Security</a> (9)</li>
           <li><a href="online-courses.html#Linux">Linux</a> (1)</li>
-          <li><a href="online-courses.html#Misc">Misc. Online Courses</a> (37)</li>
+          <li><a href="online-courses.html#Misc">Misc. Online Courses</a> (29)</li>
           <li><a href="online-courses.html#WebDev">Web Development</a> (8)</li>
           </ul>
 
           <br /><br /><br /><br />
 
-          <h3><a id="Cloud">Cloud Technologies</a> (1):</h3>
-          <p>CloudAcademy <a href="https://cloudacademy.com/">https://cloudacademy.com/</a>
+          <h3><a id="Cloud">Cloud Technologies</a> (2):</h3>
+          <p>A Cloud Guru <a href="https://acloudguru.com/">https://acloudguru.com/</a>"</p>
+          <p>CloudAcademy <a href="https://cloudacademy.com/">https://cloudacademy.com/</a></p>
 
           <br /><br /><br /><br />
 
           <h3><a id="Challenges">Code Challenges and Games</a> (5):</h3>
           <p>CheckIO <a href="https://checkio.org/">https://checkio.org/</a></p>
-          <p>Code Abbey <a href="http://www.codeabbey.com/">http://www.codeabbey.com/</a></p>
+          <p>Code Abbey <a href="https://www.codeabbey.com/">https://www.codeabbey.com/</a></p>
           <p>Coderbyte <a href="https://coderbyte.com/">https://coderbyte.com/</a></p>
-          <p>CodeCombat <a href="http://codecombat.com/">http://codecombat.com/</a></p>
+          <p>CodeCombat <a href="https://codecombat.com/">https://codecombat.com/</a></p>
           <p>The Python Challenge <a href="http://www.pythonchallenge.com/">http://www.pythonchallenge.com/</a></p>
 
           <br /><br /><br /><br />
 
           <h3><a id="CS">Computer Science</a> (2):</h3>
           <br />
-          <p><a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/index.htm?utm_source=OCWDept&utm_medium=CarouselSm&utm_campaign=FeaturedCourse">Introduction to Computer Science and Programming in Python</a> (MIT Course Number 6.0001) is intended for students with little or no programming experience. It aims to provide students with an understanding of the role computation can play in solving problems and to help students, regardless of their major, feel justifiably confident of their ability to write small programs that allow them to accomplish useful goals. The class uses the Python 3.5 programming language. <a href="https://youtu.be/ytpJdnlu9ug?list=PLUl4u3cNGP63WbdFxL8giv4yhgdMGaZNA">YouTube</a></p>
+          <p><a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/index.htm?utm_source=OCWDept&utm_medium=CarouselSm&utm_campaign=FeaturedCourse">Introduction to Computer Science and Programming in Python</a> (MIT Course Number 6.0001) is intended for students with little or no programming experience. It aims to provide students with an understanding of the role computation can play in solving problems and to help students, regardless of their major, feel justifiably confident of their ability to write small programs that allow them to accomplish useful goals. The class uses the Python 3.5 programming language.</p>
           <br />
           <p><a href="https://lagunita.stanford.edu/courses/Engineering/CS101/Summer2014/about">Stanford CS101</a> teaches the essential ideas of Computer Science for a zero-prior-experience audience. Computers can appear very complicated, but in reality, computers work within just a few, simple patterns. CS101 demystifies and brings those patterns to life, which is useful for anyone using computers today.</p>
 
@@ -70,17 +71,16 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="InfoSec">Information Security</a> (10):</h3>
+          <h3><a id="InfoSec">Information Security</a> (9):</h3>
           <p>Concise Courses <a href="https://www.concise-courses.com/">https://www.concise-courses.com/</a></p>
           <p>Cybrary <a href="https://www.cybrary.it/">https://www.cybrary.it/</a></p>
           <p>EH Academy <a href="https://academy.ehacking.net/">https://academy.ehacking.net/</a></p>
           <p>Kali Training <a href="https://kali.training/">https://kali.training/</a></p>
           <p>Metasploit Unleashed <a href="https://www.offensive-security.com/metasploit-unleashed/">https://www.offensive-security.com/~</a></p>
-          <p>Open Security Training <a href="http://opensecuritytraining.info/">http://opensecuritytraining.info/</a></p>
-          <p>PentesterAcademy <a href="http://www.pentesteracademy.com/">http://www.pentesteracademy.com/</a></p>
-          <p>PenTest Laboratory <a href="http://pentestlab.org/">http://pentestlab.org/</a></p>
-          <p>SANS Cyber Aces <a href="http://www.cyberaces.org/courses/">http://www.cyberaces.org/courses/</a></p>
-          <p>SecurityTube Training <a href="http://www.securitytube-training.com/">http://www.securitytube-training.com/</a></p>
+          <p>Open Security Training <a href="https://opensecuritytraining.info/">https://opensecuritytraining.info/</a></p>
+          <p>PentesterAcademy <a href="https://www.pentesteracademy.com/">https://www.pentesteracademy.com/</a></p>
+          <p>SANS Cyber Aces <a href="https://www.cyberaces.org/courses/">https://www.cyberaces.org/courses/</a></p>
+          <p>SecurityTube Training <a href="https://www.securitytube-training.com/">https://www.securitytube-training.com/</a></p>
 
 
           <br /><br /><br /><br />
@@ -90,16 +90,12 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Misc">Misc. Online Courses</a> (37):</h3>
+          <h3><a id="Misc">Misc. Online Courses</a> (29):</h3>
           <p>Alison <a href="https://alison.com/">https://alison.com/</a></p>
           <p>Canvas Network <a href="https://www.canvas.net/">https://www.canvas.net/</a></p>
           <p>CGCircuit <a href="https://www.cgcircuit.com/">https://www.cgcircuit.com/</a></p>
-          <p>ChalkStreet <a href="https://www.chalkstreet.com/">https://www.chalkstreet.com/</a></p>
           <p>Code Avengers <a href="https://www.codeavengers.com/">https://www.codeavengers.com/</a></p>
-          <p>Code School <a href="https://www.codeschool.com/">https://www.codeschool.com/</a></p>
           <p>Codecademy <a href="https://www.codecademy.com/">https://www.codecademy.com/</a></p>
-          <p>CodeK.tv <a href="https://codek.tv/">https://codek.tv/</a> coding videos</p>
-          <p>CodeMania <a href="http://www.codermania.com/">http://www.codermania.com/</a></p>
           <p>Codewars <a href="http://www.codewars.com/">http://www.codewars.com/</a></p>
           <p>Coursera <a href="https://www.coursera.org/">https://www.coursera.org/</a></p>
           <p>DeZyre <a href="https://www.dezyre.com/">https://www.dezyre.com/</a></p>
@@ -108,22 +104,18 @@
           <p>FutureLearn <a href="https://www.futurelearn.com/">https://www.futurelearn.com/</a></p>
           <p>Grok Learning <a href="https://groklearning.com/">https://groklearning.com/</a></p>
           <p>Khan Academy <a href="https://www.khanacademy.org/">https://www.khanacademy.org/</a></p>
-          <p>Leap Courses <a href="http://www.leapcourses.com/">http://www.leapcourses.com/</a></p>
           <p>LinkedIn Learning <a href="https://www.linkedin.com/learning/">https://www.linkedin.com/learning/</a></p>
-          <p>Lynda.com <a href="http://www.lynda.com/">http://www.lynda.com/</a></p>
           <p>Microsoft Virtual Academy <a href="https://mva.microsoft.com/">https://mva.microsoft.com/</a></p>
           <p>Mozilla Learning Network <a href="https://teach.mozilla.org/">https://teach.mozilla.org/</a></p>
           <p>One Month <a href="https://onemonth.com/">https://onemonth.com/</a></p>
-          <p>Open2Study <a href="https://www.open2study.com/">https://www.open2study.com/</a></p>
           <p>Open Education Consortium <a href="http://www.oeconsortium.org/">http://www.oeconsortium.org/</a></p>
-          <p>Open Foss Training <a href="http://openfosstraining.com/">http://openfosstraining.com/</a></p>
-          <p>Open Learn <a href="http://www.open.edu/openlearn/">http://www.open.edu/openlearn/</a></p>
+          <p>Open Learn <a href="https://www.open.edu/openlearn/">https://www.open.edu/openlearn/</a></p>
           <p>Pluralsight <a href="https://www.pluralsight.com/">https://www.pluralsight.com/</a></p>
           <p>Simplilearn <a href="https://www.simplilearn.com/">https://www.simplilearn.com/</a></p>
-          <p>SitePoint <a href="http://www.sitepoint.com/">http://www.sitepoint.com/</a></p>
-          <p>SoloLearn <a href="http://www.sololearn.com/">http://www.sololearn.com/</a></p>
+          <p>SitePoint <a href="https://www.sitepoint.com/">https://www.sitepoint.com/</a></p>
+          <p>SoloLearn <a href="https://www.sololearn.com/">https://www.sololearn.com/</a></p>
           <p>Stone River Academy <a href="https://stoneriveracademy.com/">https://stoneriveracademy.com/</a></p>
-          <p>Stone River eLearning <a href="http://stoneriverelearning.com/">http://stoneriverelearning.com/</a></p>
+          <p>Stone River eLearning <a href="https://stoneriverelearning.com/">https://stoneriverelearning.com/</a></p>
           <p>Treehouse <a href="https://teamtreehouse.com/">https://teamtreehouse.com/</a></p>
           <p>Udacity <a href="https://www.udacity.com/">https://www.udacity.com/</a></p>
           <p>Udemy <a href="https://www.udemy.com/">https://www.udemy.com/</a></p>
@@ -133,7 +125,7 @@
 
           <h3><a id="WebDev">Web Development</a> (8):</h3>
           <p>Bento <a href="https://bento.io/">https://bento.io/</a></p>
-          <p>Free Code Camp <a href="http://www.freecodecamp.com/">http://www.freecodecamp.com/</a></p>
+          <p>Free Code Camp <a href="https://www.freecodecamp.com/">https://www.freecodecamp.com/</a></p>
           <p>Frontend Masters <a href="https://frontendmasters.com/">https://frontendmasters.com/</a></p>
           <p>GA Dash <a href="https://dash.generalassemb.ly/">https://dash.generalassemb.ly/</a></p>
           <p>Gymnasium <a href="http://gymnasium.aquent.com/">http://gymnasium.aquent.com/</a></p>
@@ -159,11 +151,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -171,9 +163,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
