--- a/blogs.html
+++ b/blogs.html
@@ -24,7 +24,7 @@
           <h3>Linux Blogs, News, and Tutorials (16):</h3>
           <br />
 
-          <p><a href="http://www.2daygeek.com/">2daygeek</a> - Linux Tips, Tricks, How-to Guides, &amp; Tutorials</p>
+          <p><a href="https://www.2daygeek.com/">2daygeek</a> - Linux Tips, Tricks, How-to Guides, &amp; Tutorials</p>
 
           <br /><br />
 
@@ -37,7 +37,7 @@
 
           <br /><br />
 
-          <p><a href="http://fossforce.com/">FOSS Force</a> is a news site offering insight into the goings on in the IT world, focusing on the interests of the Open Source community.</p>
+          <p><a href="https://fossforce.com/">FOSS Force</a> is a news site offering insight into the goings on in the IT world, focusing on the interests of the Open Source community.</p>
 
           <br /><br />
 
@@ -49,7 +49,7 @@
 
           <br /><br />
 
-          <p><a href="http://linoxide.com/">LinOxide</a> is a blog platform where we publish howto articles and guides on linux and unix based distros.</p>
+          <p><a href="https://linoxide.com/">LinOxide</a> is a blog platform where we publish howto articles and guides on linux and unix based distros.</p>
 
           <br /><br />
 
@@ -58,7 +58,7 @@
 
           <br /><br />
 
-          <p><a href="http://www.omgubuntu.co.uk/">OMG! Ubuntu!</a> is an online news site covering Ubuntu and related activities in the surrounding Linux and open-source eco-systems in an approachable and engaging way.</p>
+          <p><a href="https://www.omgubuntu.co.uk/">OMG! Ubuntu!</a> is an online news site covering Ubuntu and related activities in the surrounding Linux and open-source eco-systems in an approachable and engaging way.</p>
 
           <br /><br />
 
@@ -66,15 +66,15 @@
 
           <br /><br />
 
-          <p><a href="http://www.osnews.com/">OSNews</a> reports on other technology news, on development issues and articles, hardware, and if it is a slow news day, we might kick in some sci-fi movie news or other stuff we might find interesting.</p>
+          <p><a href="https://www.osnews.com/">OSNews</a> reports on other technology news, on development issues and articles, hardware, and if it is a slow news day, we might kick in some sci-fi movie news or other stuff we might find interesting.</p>
 
           <br /><br />
 
-          <p><a href="http://www.tecmint.com/">Tecmint</a>: Linux Howtos, Tutorials, and Guides</p>
+          <p><a href="https://www.tecmint.com/">Tecmint</a>: Linux Howtos, Tutorials, and Guides</p>
 
           <br /><br />
 
-          <p><a href="http://www.thegeekstuff.com/">The Geek Stuff</a> - How-Tos, troubleshooting tips and tricks Linux and open source technologies.</p>
+          <p><a href="https://www.thegeekstuff.com/">The Geek Stuff</a> - How-Tos, troubleshooting tips and tricks Linux and open source technologies.</p>
 
           <br /><br />
 
@@ -86,7 +86,7 @@
 
           <br /><br />
 
-          <p><a href="http://www.unixmen.com/">Unixmen</a>: Linux/Unix Howtos and Tutorials</p>
+          <p><a href="https://www.unixmen.com/">Unixmen</a>: Linux/Unix Howtos and Tutorials</p>
 
 	  <br />
 
@@ -104,11 +104,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -116,9 +116,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
