--- a/book-pub.html
+++ b/book-pub.html
@@ -21,9 +21,9 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Book Publishers (6):</h3>
+          <h3>Book Publishers (5):</h3>
           <br />
-          <p><a href="http://www.dummies.com/">Dummies</a> is the platform that makes learning anything easy because it transforms the hard-to-understand into easy-to-use.</p>
+          <p><a href="https://www.dummies.com/">Dummies</a> is the platform that makes learning anything easy because it transforms the hard-to-understand into easy-to-use.</p>
           <br />
           <p><a href="https://www.nostarch.com/">No Starch Press</a> publishes the finest in geek entertainment — distinctive books on computing.</p>
           <br />
@@ -31,9 +31,7 @@
           <br />
           <p><a href="https://www.packtpub.com/">Packt Publishing</a> provides books, eBooks, video tutorials, and articles for IT developers, administrators, and users.</p>
           <br />
-          <p><a href="http://www.wiley.com/">Wiley</a> is a global publishing company that specializes in academic publishing and markets its products to professionals and consumers, students and instructors in higher education, and researchers and practitioners in scientific, technical, medical, and scholarly fields. The company produces books, journals, and encyclopedias, in print and electronically, as well as online products and services, training materials, and educational materials for undergraduate, graduate, and continuing education students.</p>
-          <br />
-          <p><a href="http://www.wrox.com/">Wrox</a> books are written by programmers for programmers.</p>
+          <p><a href="https://www.wiley.com/">Wiley</a> is a global publishing company that specializes in academic publishing and markets its products to professionals and consumers, students and instructors in higher education, and researchers and practitioners in scientific, technical, medical, and scholarly fields. The company produces books, journals, and encyclopedias, in print and electronically, as well as online products and services, training materials, and educational materials for undergraduate, graduate, and continuing education students.</p>
 
 	  <br />
 
@@ -51,11 +49,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -63,9 +61,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
