--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Main Menu (486):</h3>
+          <h3>Main Menu (459):</h3>
           <br />
           <ul>
-          <li><a href="conferences.html">Conferences</a> (45)</li>
-          <li><a href="book-pub.html">Book Publishers</a> (6)</li>
-          <li><a href="bsd.html">BSD Blogs, Forums, News, &amp; Tutorials</a> (7)</li>
-          <li><a href="bsd-flavors.html">BSD Flavors</a> (14)</li>
+          <li><a href="book-pub.html">Book Publishers</a> (5)</li>
+          <li><a href="bsd.html">BSD Blogs, Forums, News, &amp; Tutorials</a> (3)</li>
+          <li><a href="bsd-flavors.html">BSD Flavors</a> (13)</li>
+          <li><a href="conferences.html">Conferences</a> (41)</li>
           <li><a href="robotics.html">DIY Robotics</a> (6)</li>
           <li><a href="cybersecurity.html">Ethical Hacking, Forensics, Infosec, PenTesting</a> (40)</li>
-          <li><a href="firewalls.html">Firewalls: Distributions &amp; Front-ends</a> (10)</li>
-          <li><a href="gnu-bsd.html">GNU/BSD Distributions: Desktop &amp; Server</a> (3)</li>
+          <li><a href="firewalls.html">Firewalls: Distributions &amp; Front-ends</a> (9)</li>
+          <li><a href="gnu-bsd.html">GNU/BSD Distributions: Desktop &amp; Server</a> (1)</li>
           <li><a href="illumosdistros.html">Illumos Distributions: Desktop &amp; Server</a> (6)</li>
           <li><a href="blogs.html">Linux Blogs, News, &amp; Tutorials</a> (16)</li>
           <li><a href="linuxdistros-anonymity.html">Linux Distributions: Anonymity &amp; Privacy</a> (5)</li>
           <li><a href="linuxdistros-desktop-server.html">Linux Distributions: Desktop &amp; Server</a> (10)</li>
           <li><a href="linuxdistros-infosec.html">Linux Distributions: Information Security</a> (16)</li>
-          <li><a href="magazines.html">Magazines</a> (24)</li>
+          <li><a href="magazines.html">Magazines</a> (18)</li>
           <li><a href="moble-os.html">Moble Operating Systems</a> (2)</li>
           <li><a href="podcasts.html">Netcasts, Oggcasts, Podcasts, Webcasts</a> (102)</li>
-          <li><a href="online-courses.html">Online Courses</a> (67)</li>
+          <li><a href="online-courses.html">Online Courses</a> (59)</li>
           <li><a href="python-programming.html">Python Programming</a> (81)</li>
           <li><a href="video-gaming.html">Video Gaming: Linux</a> (26)</li>
           </ul>
@@ -60,11 +60,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -72,9 +72,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
