--- a/linuxdistros-desktop-server.html
+++ b/linuxdistros-desktop-server.html
@@ -39,11 +39,11 @@
           <br /><br />
           <p><a href="https://www.opensuse.org/">openSUSE</a> creates one of the world's best Linux distributions, working together in an open, transparent and friendly manner as part of the worldwide Free and Open Source Software community.</p>
           <br /><br />
-          <p><a href="http://www.pclinuxos.com/">PCLinuxOS</a> is a free easy to use Linux-based Operating System for x86 and x86_64 desktops or laptops.</p>
+          <p><a href="https://www.pclinuxos.com/">PCLinuxOS</a> is a free easy to use Linux-based Operating System for x86 and x86_64 desktops or laptops.</p>
           <br /><br />
           <p><a href="http://www.slackware.com/">Slackware Linux</a> by Patrick Volkerding is an advanced Linux operating system, designed with the twin goals of ease of use and stability as top priorities. Including the latest popular software while retaining a sense of tradition, providing simplicity and ease of use alongside flexibility and power, Slackware brings the best of all worlds to the table.</p>
           <br /><br />
-          <p><a href="http://www.ubuntu.com/">Ubuntu</a> is a complete desktop Linux operating system, freely available with both community and professional support.</p>
+          <p><a href="https://www.ubuntu.com/">Ubuntu</a> is a complete desktop Linux operating system, freely available with both community and professional support.</p>
 	  <br />
 
 
@@ -60,11 +60,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -72,9 +72,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
