--- a/magazines.html
+++ b/magazines.html
@@ -21,16 +21,16 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Magazines (24):</h3>
+          <h3>Magazines (18):</h3>
           <br />
           <ul>
           <li><a href="magazines.html#BSD">BSD</a> (2)</li>
           <li><a href="magazines.html#Electronics">Electronics</a> (1)</li>
-          <li><a href="magazines.html#GNU">GNU/Linux</a> (5)</li>
-          <li><a href="magazines.html#InfoSec">Information Security</a> (9)</li>
-          <li><a href="magazines.html#Open">Open Source</a> (1)</li>
+          <li><a href="magazines.html#GNU">GNU/Linux</a> (3)</li>
+          <li><a href="magazines.html#InfoSec">Information Security</a> (7)</li>
+          <li><a href="magazines.html#Open">Open Source</a> (0)</li>
           <li><a href="magazines.html#Programming">Programming</a> (2)</li>
-          <li><a href="magazines.html#Pi">Raspberry Pi</a> (3)</li>
+          <li><a href="magazines.html#Pi">Raspberry Pi</a> (2)</li>
           <li><a href="magazines.html#Tech">Technology</a> (1)</li>
           </ul>
 
@@ -47,48 +47,42 @@
 
 	  <br /><br /><br /><br />
 
-	  <h3><a id="GNU">GNU/Linux</a> (5):</h3>
-	  <p>Full Circle <a href="http://fullcirclemagazine.org/">http://fullcirclemagazine.org/</a></p>
-	  <p>Linux Format <a href="http://www.linuxformat.com/">http://www.linuxformat.com/</a></p>
-	  <p>Linux Magazine <a href="http://www.linux-magazine.com/">http://www.linux-magazine.com/</a></p>
-	  <p>Linux User &#38; Developer <a href="http://www.imagine-publishing.co.uk/portfolio/magazines/LinuxUserAndDeveloper">http://www.imagine-publishing.co.uk/</a></p>
-	  <p>Linux Voice <a href="https://www.linuxvoice.com/">https://www.linuxvoice.com/</a></p>
+	  <h3><a id="GNU">GNU/Linux</a> (3):</h3>
+	  <p>Full Circle <a href="https://fullcirclemagazine.org/">http://fullcirclemagazine.org/</a></p>
+	  <p>Linux Format <a href="https://www.linuxformat.com/">http://www.linuxformat.com/</a></p>
+	  <p>Linux Magazine <a href="https://www.linux-magazine.com/">http://www.linux-magazine.com/</a></p>
 
 	  <br /><br /><br /><br />
 
-	  <h3><a id="InfoSec">Information Security</a> (9):</h3>
-	  <p>2600: The Hacker Quarterly <a href="http://www.2600.com/">http://www.2600.com/</a></p>
-    <p>Digital Forensics Magazine <a href="http://www.digitalforensicsmagazine.com/">http://www.digitalforensicsmagazine.com/</a></p>
+	  <h3><a id="InfoSec">Information Security</a> (7):</h3>
+	  <p>2600: The Hacker Quarterly <a href="https://www.2600.com/">https://www.2600.com/</a></p>
+    <p>Digital Forensics Magazine <a href="https://www.digitalforensicsmagazine.com/">https://www.digitalforensicsmagazine.com/</a></p>
     <p>eForensics <a href="https://eforensicsmag.com/">https://eforensicsmag.com/</a></p>
-    <p>Hacker Monthly <a href="http://hackermonthly.com/">http://hackermonthly.com/</a></p>
     <p>Hakin9 <a href="https://hakin9.org/">https://hakin9.org/</a></p>
-    <p>&#91;HACK&#93;IN&#40;SIGHT&#41; <a href="http://www.hackinsight.org/">http://www.hackinsight.org</a></p>
-    <p>Infosecurity Magazine <a href="http://www.infosecurity-magazine.com/">http://www.infosecurity-magazine.com/</a></p>
-    <p>&#40;IN&#41;SECURE Magazine <a href="http://www.net-security.org/insecuremag.php">http://www.net-security.org/insecuremag.php</a></p>
+    <p>Infosecurity Magazine <a href="https://www.infosecurity-magazine.com/">https://www.infosecurity-magazine.com/</a></p>
+    <p>&#40;IN&#41;SECURE Magazine <a href="https://www.net-security.org/insecuremag.php">https://www.net-security.org/insecuremag.php</a></p>
     <p>PenTest Magazine <a href="https://pentestmag.com/">https://pentestmag.com/</a></p>
 
 	  <br /><br /><br /><br />
 
-	  <h3><a id="Open">Open Source</a> (1):</h3>
-	  <p>Open Source For You <a href="http://opensourceforu.efytimes.com/">http://opensourceforu.efytimes.com/</a></p>
+	  <h3><a id="Open">Open Source</a> (0):</h3>
 
 	  <br /><br /><br /><br />
 
 	  <h3><a id="Programming">Programming</a> (2):</h3>
-	  <p>CODE Magazine <a href="http://www.codemag.com/Magazine">http://www.codemag.com/Magazine</a></p>
-	  <p>Software Developer's Journal <a href="http://sdjournal.org/">http://sdjournal.org/</a></p>
+	  <p>CODE Magazine <a href="https://www.codemag.com/Magazine">https://www.codemag.com/Magazine</a></p>
+	  <p>Software Developer's Journal <a href="https://sdjournal.org/">https://sdjournal.org/</a></p>
 
 	  <br /><br /><br /><br />
 
-	  <h3><a id="Pi">Raspberry Pi</a> (3):</h3>
+	  <h3><a id="Pi">Raspberry Pi</a> (2):</h3>
 	  <p>MagPi <a href="https://www.raspberrypi.org/magpi/">https://www.raspberrypi.org/magpi/</a></p>
-	  <p>Raspberry Pi Geek <a href="http://www.raspberry-pi-geek.com/">http://www.raspberry-pi-geek.com/</a></p>
-	  <p>Raspi <a href="http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi">http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi</a></p>
+	  <p>Raspberry Pi Geek <a href="https://www.raspberry-pi-geek.com/">https://www.raspberry-pi-geek.com/</a></p>
 
 	  <br /><br /><br /><br />
 
 	  <h3><a id="Tech">Technology</a> (1):</h3>
-	  <p>ADMIN Magazine <a href="http://www.admin-magazine.com/">http://www.admin-magazine.com/</a></p>
+	  <p>ADMIN Magazine <a href="https://www.admin-magazine.com/">https://www.admin-magazine.com/</a></p>
 
 	  <br />
 
@@ -105,11 +99,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -117,9 +111,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
