--- a/robotics.html
+++ b/robotics.html
@@ -35,11 +35,11 @@
           <br />
           <p><a href="https://diyhacking.com/">DIY Hacking</a> - Check out our open source DIY projects and start building your own projects for Arduino, Raspberry Pi, and Intel Edison today. Each tutorial comes with detailed step by step instructions on how to build them. They are also accompanied with pictures and videos for better understanding.</p>
           <br /><br />
-          <p><a href="http://www.instructables.com/">instructables</a> is a place that lets you explore, document, and share your creations.</p>
+          <p><a href="https://www.instructables.com/">instructables</a> is a place that lets you explore, document, and share your creations.</p>
           <br /><br />
-          <p><a href="http://robotshop.com/letsmakerobots/">Let’s Make Robots</a> is the ultimate community site where you can learn about robots / technology, see what others have built, ask questions and get to know others in the community. Our slogan is: LEARN. BUILD. SHARE. and we take pride in calling it a “do it together” as opposed to “do it yourself” site.</p>
+          <p><a href="https://robotshop.com/letsmakerobots/">Let’s Make Robots</a> is the ultimate community site where you can learn about robots / technology, see what others have built, ask questions and get to know others in the community. Our slogan is: LEARN. BUILD. SHARE. and we take pride in calling it a “do it together” as opposed to “do it yourself” site.</p>
           <br /><br />
-          <p><a href="http://robohub.org/">Robohub</a> is a non-profit online communication platform that brings together experts in robotics research, start-ups, business, and education from across the globe.</p>
+          <p><a href="https://robohub.org/">Robohub</a> is a non-profit online communication platform that brings together experts in robotics research, start-ups, business, and education from across the globe.</p>
 
           <br /><br /><br /><br />
 
@@ -51,7 +51,7 @@
 
           <h3><a id="Foundations">Foundations</a> (1):</h3>
           <br />
-          <p><a href="http://www.roboticseducation.org/">Robotics Education and Competition Foundation</a> (REC) - Inspiring students, one robot at a time.</p>
+          <p><a href="https://www.roboticseducation.org/">Robotics Education and Competition Foundation</a> (REC) - Inspiring students, one robot at a time.</p>
 
           <br /><br /><br /><br />
 
@@ -72,11 +72,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -84,9 +84,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
