--- a/video-gaming.html
+++ b/video-gaming.html
@@ -21,31 +21,29 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Video Gaming: Linux (26):</h3>
+          <h3>Video Gaming: Linux (21):</h3>
           <br />
           <ul>
-          <li><a href="video-gaming.html#Blogs">Blogs, News, Reviews</a> (12)</li>
+          <li><a href="video-gaming.html#Blogs">Blogs, News, Reviews</a> (11)</li>
           <li><a href="video-gaming.html#Digital">Digital Distribution Services</a> (3)</li>
           <li><a href="video-gaming.html#Forums">Forums</a> (2)</li>
           <li><a href="video-gaming.html#Platforms">Linux Gaming Platforms</a> (3)</li>
-          <li><a href="video-gaming.html#Bundles">Pay What You Want Game Bundles</a> (5)</li>
-          <li><a href="video-gaming.html#Repositories">Repositories</a> (1)</li>
+          <li><a href="video-gaming.html#Bundles">Pay What You Want Game Bundles</a> (2)</li>
           </ul>
 
           <br /><br /><br /><br />
 
-          <h3><a id="Blogs">Blogs, News, Reviews</a> (12):</h3>
-          <p>Boiling Steam <a href="http://boilingsteam.com/">http://boilingsteam.com/</a></p>
-          <p>Free Gamer <a href="http://freegamer.blogspot.com/">http://freegamer.blogspot.com/</a></p>
+          <h3><a id="Blogs">Blogs, News, Reviews</a> (11):</h3>
+          <p>Boiling Steam <a href="https://boilingsteam.com/">https://boilingsteam.com/</a></p>
+          <p>Free Gamer <a href="https://freegamer.blogspot.com/">https://freegamer.blogspot.com/</a></p>
           <p>Gaming on Linux <a href="https://www.gamingonlinux.com/">https://www.gamingonlinux.com/</a></p>
-          <p>Indie DB <a href="http://www.indiedb.com/">http://www.indiedb.com/</a></p>
-          <p>Indie Game Magazine <a href="http://indiegamemag.com/">http://indiegamemag.com/</a></p>
-          <p>Indie Game News <a href="http://www.indiegamenews.com/">http://www.indiegamenews.com/</a></p>
-          <p>Indie Game Reviewer <a href="http://indiegamereviewer.com/">http://indiegamereviewer.com/</a></p>
-          <p>Indie Games The Weblog <a href="http://indiegames.com/">http://indiegames.com/</a></p>
-          <p>Linux Game News <a href="http://linuxgamenews.com/">http://linuxgamenews.com/</a></p>
-          <p>linuX-gamers.net <a href="http://linux-gamers.net/">http://linux-gamers.net/</a></p>
-          <p>Mod DB <a href="http://www.moddb.com/">http://www.moddb.com/</a></p>
+          <p>Indie DB <a href="https://www.indiedb.com/">https://www.indiedb.com/</a></p>
+          <p>Indie Game Magazine <a href="https://indiegamemag.com/">https://indiegamemag.com/</a></p>
+          <p>Indie Game News <a href="https://www.indiegamenews.com/">https://www.indiegamenews.com/</a></p>
+          <p>Indie Game Reviewer <a href="https://indiegamereviewer.com/">https://indiegamereviewer.com/</a></p>
+          <p>Indie Games The Weblog <a href="https://indiegames.com/">https://indiegames.com/</a></p>
+          <p>Linux Game News <a href="https://linuxgamenews.com/">https://linuxgamenews.com/</a></p>
+          <p>Mod DB <a href="https://www.moddb.com/">https://www.moddb.com/</a></p>
           <p>RootGamer <a href="https://rootgamer.com/">https://rootgamer.com/</a></p>
 
           <br /><br /><br /><br />
@@ -53,12 +51,12 @@
           <h3><a id="Digital">Digital Distribution Services</a> (3):</h3>
           <p>GOG.com <a href="https://www.gog.com/">https://www.gog.com/</a></p>
           <p>itch.io <a href="https://itch.io/">https://itch.io/</a></p>
-          <p>Steam <a href="http://store.steampowered.com/">http://store.steampowered.com/</a></p>
+          <p>Steam <a href="https://store.steampowered.com/">https://store.steampowered.com/</a></p>
 
           <br /><br /><br /><br />
 
           <h3><a id="Forums">Forums</a> (2):</h3>
-          <p>GamersOnLinux <a href="http://www.gamersonlinux.com/forum/">http://www.gamersonlinux.com/forum/</a></p>
+          <p>GamersOnLinux <a href="https://www.gamersonlinux.com/forum/">https://www.gamersonlinux.com/forum/</a></p>
           <p>Linux Gamers Forum <a href="https://www.gamingonlinux.com/forum/">https://www.gamingonlinux.com/forum/</a></p>
 
           <br /><br /><br /><br />
@@ -69,27 +67,15 @@
           <br /><br />
           <p><a href="https://www.playonlinux.com/">PlayOnLinux</a> is a piece of software which allows you to easily install and use numerous games designed to run with Microsoft Windows.</p>
           <br /><br />
-          <p><a href="http://store.steampowered.com/steamos/">SteamOS</a> developed by <a href="http://www.valvesoftware.com/">Valve Software</a> builds on top of the solid Debian core and optimizes it for a living room experience. Most of all, it is an open Linux platform that leaves you in full control. You can take charge of your system and install new software or content as you want.</p>
+          <p><a href="https://store.steampowered.com/steamos/">SteamOS</a> developed by <a href="https://www.valvesoftware.com/">Valve Software</a> builds on top of the solid Debian core and optimizes it for a living room experience. Most of all, it is an open Linux platform that leaves you in full control. You can take charge of your system and install new software or content as you want.</p>
 
           <br /><br /><br /><br />
 
-          <h3><a id="Bundles">Pay What You Want Game Bundles</a> (5):</h3>
+          <h3><a id="Bundles">Pay What You Want Game Bundles</a> (2):</h3>
           <br />
-          <p><a href="http://www.bundle-in-a-box.com/">Bundle In A Box</a> is a thematic pay-what-you-want gaming bundle, that helps new games debut, supports charity and directly strengthens creators via the Indie Dev Grant. As more people buy it more extras get unlocked and more money is donated.</p>
-          <br /><br />
-          <p><a href="https://groupees.com/">Groupees</a> runs unique sales on music, games, ebooks and films- benefiting charities around the world.</p>
-          <br /><br />
           <p><a href="https://www.indiegala.com/">Indiegala</a> lets customers set their own price for high-quality indie games and music, then donate some or all of the proceeds to Able Gamers and Italian Red Cross for helping Emilia hit by earthquake.</p>
           <br /><br />
-          <p><a href="https://indiegamestand.com/">IndieGameStand</a> is a different kind of indie gaming bundle and promotional website. Our site is about featuring and promoting a new independent game every 96 hours for gamers to purchase at a discounted price. That's a new Pay-What-You-Want game sale every few days.</p>
-          <br /><br />
           <p><a href="https://www.humblebundle.com/">Humble Bundle</a> is a series of collections ("bundles") of books, games, and music that are sold and distributed online at a price determined by the purchaser and buyers can set the revenue split between the developers, charities and humble bundle organizers.</p>
-
-          <br /><br /><br /><br />
-
-          <h3><a id="Repositories">Repositories</a> (1):</h3>
-          <br />
-          <p>PlayDeb.net <a href="http://www.playdeb.net/">http://www.playdeb.net/</a></p>
 
     <br />
 
@@ -108,11 +94,11 @@
           <li><a href="https://www.freebsdfoundation.org/" class="tooltip">FreeBSD Foundation<span>Non-profit organization dedicated to supporting and promoting the FreeBSD Project.</span></a></li>
           <li><a href="https://www.fsf.org" class="tooltip">FSF<span>The Free Software Foundation is a nonprofit with a worldwide mission to promote computer user freedom and to defend the rights of all free software users.</span></a></li>
           <li><a href="https://www.gnu.org" class="tooltip">GNU OS<span>The GNU Project was launched in 1984 to develop a complete Unix-like operating system which is free software: the GNU operating system.</span></a></li>
-          <li><a href="http://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
-          <li><a href="http://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
+          <li><a href="https://gnuworldorder.info/" class="tooltip">GNU World Order<span>GNU World Order is an internet audio show about GNU, Linux, UNIX, and other technical and geeky topics.</span></a></li>
+          <li><a href="https://hackerpublicradio.org" class="tooltip">Hacker Public Radio<span>By the community, for the community.</span></a></li>
           <li><a href="https://kernel.org/" class="tooltip">kernel.org<span>The primary site for the Linux kernel source.</span></a></li>
           <li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
-          <li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
+          <li><a href="https://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
           <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
           <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
           <li><a href="https://www.python.org/psf/" class="tooltip">PSF<span>Python Software Foundation</span></a></li>
@@ -120,9 +106,8 @@
           <li><a href="http://slackermedia.info" class="tooltip">Slackermedia<span>Slackermedia is documentation providing the information a user needs to create a full multimedia studio running on Slackware Linux.</span></a></li>
           <li><a href="https://bsd.slashdot.org/" class="tooltip">Slashdot BSD<span>Don't fear the deamons!</span></a></li>
           <li><a href="https://linux.slashdot.org/" class="tooltip">Slashdot Linux<span>Don't fear the penguins!</span></a></li>
-          <li><a href="http://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
-          <li><a href="https://stallman.org" class="tooltip">Stallman, Richard<span>This is the personal web site of Richard M. Stallman. a.k.a. RMS</span></a></li>
-          <li><a href="http://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
+          <li><a href="https://linux.softpedia.com/" class="tooltip">Softpedia Linux<span>Linux Software and Reviews</span></a></li>
+          <li><a href="https://www.tllts.org/" class="tooltip">TLLTS<span>Weekly live webcasted radio style show about GNU/Linux and Technology. </span></a></li>
           <li><a href="http://www.tuxmachines.org/" class="tooltip">tuxmachines.org<span>Do you waddle the waddle?</span></a></li>
         </ul>
 
